[package]
name = "angry_smurf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pcap = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
pnet = "0.34"
pnet_packet = "0.34"
dns-parser = "0.8"
ipnet = "2"
anyhow = "1.0"
rand = "0.8"
